# JIMNIAC

./: .gitignore  Cargo.toml  README.md  guide.md  spec.txt  ternary.md
.cargo/: config.toml
.github/workflows/: test.yml
JIMNIAC/: Cargo.toml
JIMNIAC/src/: \  lib.rs
JIMNIAC/src/cpu/: consts.rs  fedeex.rs  jt1701isa.rs  macros.rs  mod.rs  ports.rs  registers.rs  statusword.rs
JIMNIAC/src/stack/: errors.rs
JX_01/: Cargo.toml  README.md
JX_01/src/: lib.rs  main.rs
JX_01/src/cpu/: event_loop.rs  mod.rs
JX_01/src/gpu/: mod.rs
JX_01/src/isa/: code.rs  mod.rs  registers.rs
JX_01/src/memory/: mod.rs
JX_01/src/ports/: mod.rs
jt1701/: Cargo.toml
jt1701/src/: lib.rs  septivigntimal.rs  trits.rs  tryte.rs  word.rs
jt1701/src/cpu/: consts.rs  errors.rs  fedeex.rs  jt1701isa.rs  macros.rs  mod.rs  ports.rs  registers.rs  statusword.rs
jt1701/src/stack/: hash.rs  mod.rs
jxasm/: Cargo.toml
jxasm/src/: ast.rs  config.rs  main.rs  preprocessor.rs
septivigntimal/: Cargo.toml
septivigntimal/src/: lib.rs
src/: assembler.rs  cpu.rs  errors.rs  interpreter.rs  lib.rs  machine.rs  register.rs  spec.md  stack.rs  trits.rs  tryte.rs  types.rs  word.rs
src/cpu/: jt1701isa.rs  macros.rs  mod.rs  registers.rs  statusword.rs
src/stack/: hash.rs
src/tryte/: binops.rs  mod.rs  unops.rs
src/word/: binops.rs  mod.rs
ternary/: Cargo.toml
ternary/src/: errors.rs  floating.rs  lib.rs  prelude.rs  trits.rs  tryte.rs  word.rs
terscii/: Cargo.toml
terscii/src/: lib.rs
testing/: Cargo.toml
testing/src/: lib.rs
tobj/: Cargo.toml
tobj/src/: lib.rs
(+20 files in other folders)
