[package]
name = "JIMNIAC"
author = "Jimmy Ostler"
version = "0.2.0"
edition = "2024"

[dependencies]
ternary = { path = "../ternary" }
septivigntimal = { path = "../septivigntimal" }
itertools.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

