[package]
name = "JX_01"
version = "0.1.0"
edition = "2024"

[dependencies]
ternary = { path = "../ternary" }
terscii = { path = "../terscii" }
septivigntimal = { path = "../septivigntimal" }
sdl3 = { version = "0.16.1", features = ["test-mode"] }
crossbeam-utils = "0.8.21"

[features]
default = ["gpu"]
gpu = []
